--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: ${{ github.repository }}.wiki
-      - run: ls -alh
+      - run: |
+          touch actions.log
+          echo '${{ github.event.head_commit.id }} ${{ github.event.head_commit.message }}' >> actions.log
+          git add .
+          git commit -m 'Recording action run #${{ github.run_id }}'
+          git push origin master
