--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Dump Context
         run: echo '${{ toJSON( github ) }}'
+      - name: Dump ENV
+        run: set
       - name: Checkout Wiki
         uses: actions/checkout@v2
         with:
